--- a/KTMKomuter/appsettings.json
+++ b/KTMKomuter/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ParcelConnStr": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\afeef\\Documents\\KtmDb.mdf;Integrated Security=True;Connect Timeout=30"
+  }
 }
