--- a/KTMKomuter/appsettings.json
+++ b/KTMKomuter/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ParcelConnStr": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\afeef\\Documents\\KtmDb.mdf;Integrated Security=True;Connect Timeout=30"
+    "ParcelConnStr": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\User\\Documents\\KtmDb.mdf;Integrated Security=True;Connect Timeout=30"
   }
 }
