--- a/KTMKomuter/appsettings.json
+++ b/KTMKomuter/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ParcelConnStr": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\afeef\\Documents\\KtmDb.mdf;Integrated Security=True;Connect Timeout=30"
+  },
+  "Gmail": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "ariefnurazams@gmail.com",
+    "Password": "itde afxq tvpu qvjt",
+    "SMTP": {
+      "starttls": {
+        "enable": true
+      }
+    }
   }
 }
