--- a/KTMKomuter/appsettings.json
+++ b/KTMKomuter/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "ParcelConnStr": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\afeef\\Documents\\KtmDb.mdf;Integrated Security=True;Connect Timeout=30"
+    "ParcelConnStr": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=KtmDb;Integrated Security=True;Pooling=False;Encrypt=False"
   },
 
   "Gmail": {
