--- a/KTMKomuter/appsettings.json
+++ b/KTMKomuter/appsettings.json
@@ -14,8 +14,8 @@
   "Gmail": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "",
-    "Password": "",
+    "Username": "ariefnurazams@gmail.com",
+    "Password": "itde afxq tvpu qvjt",
     "SMTP": {
       "starttls": {
         "enable": true
